--- a/cms/public/config.yml
+++ b/cms/public/config.yml
@@ -1,12 +1,12 @@
 backend:
   name: github
   # Replace this with the Github repo you want to make change
-  repo: github-username/target-github-repo
+  repo: mengting1010/cms-example
   # This site_domain and base_url are sudo domains
   # Replace site_domain with targetDomain pulumi stack configuration inside cms/infrastructure folder
   # Replace base_url with targetDomain pulumi stack configuration inside cms-oauth/infrastructure folder
-  site_domain: https://some-cms-domain.com
-  base_url: https://some-oauth-domain.com
+  site_domain: https://test-cms-domain.com
+  base_url: https://test-oauth-domain.com
   
 publish_mode: editorial_workflow
 
